--- a/wedding_plan/static/src/css/wedding.css
+++ b/wedding_plan/static/src/css/wedding.css
@@ -137,7 +137,7 @@
 
 /* Invitation Cover */
 .invitation-cover {
-    background-image: url('/wedding_plan/static/src/images/inv-cover.jpg');
+    background-image: url('/wedding_plan/static/src/images/cover.jpeg');
     height: 100%;
     background-size: cover;
     background-position: center;
@@ -395,7 +395,7 @@
   width: 100%;
   height: 100vh;
   /* background-image: url('/wedding_plan/static/src/images/floral-frame.jpg'); */
-  background-image: url('/wedding_plan/static/src/images/inv-cover.jpg');
+  background-image: url('/wedding_plan/static/src/images/bg.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -713,15 +713,15 @@
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #cecece;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
 .nav-dot.active {
-  background-color: #fff;
+  background-color: #d9c2b0;
   transform: scale(1.2);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 10px rgba(181, 129, 129, 0.7);
 }
 
 /* Enhanced Wishes Container */
